--- a/ux.html
+++ b/ux.html
@@ -41,6 +41,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/intouchgroup/b6217e3c-417b-43f0-9ac0-7324aaf8bc9d'>Intouch Group - VP, UX Director</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/intouchgroup/e1561da5-8d93-4499-a417-dae6d61dcc59'>Intouch Group - VP, UX Director</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692300747--nod-a-ux-designer-sprint-designer-h-f'>Sia Partners [nod-A] UX Designer - Sprint Designer H/F | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://westphalia-datalab.join.com/jobs/259998-ux-designer-w-m-d'>Job @ Westphalia DataLab  (M?nster): UX Designer (... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -89,11 +101,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
+<h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/watermark/jobs/ux-intern-dUqsyMRWCr6BECaKld2Sj6'>UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/watermark/jobs/ux-intern-dUqsyMRWCr6BECaKld2Sj6'>UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -160,7 +172,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
+<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -168,7 +180,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248707-ux-designer-designer-publisher-'>Woongjin, Inc UX Designer (Designer / Publisher) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248707-ux-designer-designer-publisher-'>Woongjin, Inc UX Designer (Designer / Publisher) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -210,11 +222,11 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/homex/5844df51-76a5-4831-b695-4ae808930cfa'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/5844df51-76a5-4831-b695-4ae808930cfa'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/homex/9a8d0a87-8739-4d6e-9cd0-a94e69e175d1'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/9a8d0a87-8739-4d6e-9cd0-a94e69e175d1'>HomeX - Senior Content Lead (Marketing + UX)</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -306,7 +318,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/leaseweb/jobs/1787123'>Job Application for UI/UX Designer at LeaseWeb</a></h5> 
+<h5><a href='https://boards.greenhouse.io/leaseweb/jobs/1787123'>Job Application for UI/UX Designer at LeaseWeb</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -375,11 +387,11 @@ for candidates with solid technical foundations and a desire to continue learnin
 VERTRIEBSSPEZIALIST (M/W) in N?rnberg (published: 28.09.2018). Apply now 
 or check?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sukUBhw5&__jvsc=Twitter&bid=nq6QPKwq&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sukUBhw5&__jvsc=Twitter&bid=nq6QPKwq&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sEMBNhwA&__jvsc=Twitter&bid=ntsPPKwO&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sEMBNhwA&__jvsc=Twitter&bid=ntsPPKwO&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
@@ -423,7 +435,7 @@ or check?...</p>
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vicis/f1b6c704-6e51-42bc-8f90-66999fe73c93'>VICIS - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vicis/f1b6c704-6e51-42bc-8f90-66999fe73c93'>VICIS - UX Designer</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -456,18 +468,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MastersIndiaPrivateLimited/743999691924764-ui-ux-designer'>Masters India Private Limited UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Noida</span></p>
-<p>Posted on: 2019-07-20</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4364063002'>Job Application for UX/UI Designer at Glovo</a></h5> 
-<p><span class="badge badge-light">Barcelona Barcelona</span></p>
-<p>Posted on: 2019-07-20</p>
-<hr/>
-<h5><a href='https://divido.workable.com/j/AAC99A6935'>Divido - Jobs: UX/UI Designer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-20</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/84c5jgq7cjkhn9m4bkujsd39fy/User-Research-Manager-San-Francisco-CA'>Senior UX Researcher | My Crelate Portal</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
 
